RESOLVED FIXED260314
REGRESSION(266959@main): [ Debug ] ASSERTION FAILED: m_suspendIfNeededWasCalled
https://bugs.webkit.org/show_bug.cgi?id=260314
Summary REGRESSION(266959@main): [ Debug ] ASSERTION FAILED: m_suspendIfNeededWasCalled
Sihui Liu
Reported 2023-08-16 15:47:12 PDT
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 JavaScriptCore 0x13753873c WTFCrash + 24 (Assertions.cpp:327) 1 WebCore 0x282be86ac WTFCrashWithInfo(int, char const*, char const*, int) + 36 (Assertions.h:762) 2 WebCore 0x283906f98 WebCore::ActiveDOMObject::assertSuspendIfNeededWasCalled() const + 200 (ActiveDOMObject.cpp:104) 3 WebCore 0x283be9500 WebCore::ScriptExecutionContext::checkConsistency() const + 704 (ScriptExecutionContext.cpp:170) 4 WebCore 0x283beb4c0 WebCore::ScriptExecutionContext::stopActiveDOMObjects() + 32 (ScriptExecutionContext.cpp:382) 5 WebCore 0x28399fa54 WebCore::Document::stopActiveDOMObjects() + 76 (Document.cpp:2888) 6 WebCore 0x28399f5d0 WebCore::Document::commonTeardown() + 32 (Document.cpp:851) 7 WebCore 0x2839ad404 WebCore::Document::willBeRemovedFromFrame() + 796 (Document.cpp:2754) 8 WebCore 0x28491a784 WebCore::LocalFrame::setView(WTF::RefPtr<WebCore::LocalFrameView, WTF::RawPtrTraits<WebCore::LocalFrameView>, WTF::DefaultRefDerefTraits<WebCore::LocalFrameView>>&&) + 156 (LocalFrame.cpp:242) 9 WebCore 0x28491f730 WebCore::LocalFrame::createView(WebCore::IntSize const&, std::__1::optional<WebCore::Color> const&, WebCore::IntSize const&, WebCore::IntRect const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) + 304 (LocalFrame.cpp:875) 10 WebKit 0x11ad57110 WebKit::WebLocalFrameLoaderClient::transitionToCommittedForNewPage() + 1020 (WebLocalFrameLoaderClient.cpp:1500) 11 WebCore 0x2846bfa88 WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) + 1712 (FrameLoader.cpp:2309) 12 WebCore 0x2846be9a0 WebCore::FrameLoader::commitProvisionalLoad() + 1228 (FrameLoader.cpp:2117) 13 WebCore 0x2846477f4 WebCore::DocumentLoader::commitIfReady() + 60 (DocumentLoader.cpp:414)
Attachments
Sihui Liu
Comment 1 2023-08-16 15:49:22 PDT
This happens when running layout tests in LayoutTests/fast/speechsynthesis.
Radar WebKit Bug Importer
Comment 2 2023-08-16 16:00:40 PDT
Sihui Liu
Comment 3 2023-08-16 16:09:55 PDT
EWS
Comment 4 2023-08-16 23:27:36 PDT
Committed 266990@main (335771b16fe5): <https://commits.webkit.org/266990@main> Reviewed commits have been landed. Closing PR #16766 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.